--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "check-env": "~1.2.0",
     "commander": "~2.8.1",
-    "irc": "~0.3.9",
+    "irc": "leeopop/node-irc",
     "lodash": "~3.9.3",
     "slack-client": "~1.4.0",
     "winston": "~1.0.0"
